# Golden-Encryption

./: CMakeLists.txt  README.md  main.cpp
128 bit AES encryptor and decryptor in C++/: CMakeLists.txt  decoding.h  encoding.h  encryption.aes  input.txt  key_expand.h  main.cpp  outputtext.txt
